--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src=".\Houtarou_Oreki.webp" alt="reddit wallpaper">
+        <img src="./Houtarou_Oreki.webp" alt="reddit wallpaper">
       </td>
       <td>
         <h1>KULDEEP PAWAR </h1>
