--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
   <hr>
 
-  <a href="C:\Users\kulu1\Desktop\webdev\html-personal site\hobbies.html">MY HOBBIES</a>
+  <a href="./hobbies.html">MY HOBBIES</a>
   <br>
-  <a href="C:\Users\kulu1\Desktop\webdev\html-personal site\contactdetails.html">Contact Details</a>
+  <a href="./contactdetails.html">Contact Details</a>
 
 
 </body>
