--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <p><h3>EDUCATION</h3>
   <ul><!--unordered list-->
     <li>EFIA</li>
-    <img src="C:\Users\kulu1\Desktop\webdev\html-personal site\images\efiaschool.png" alt="">
+    <img src="./efiaschool.png" alt="">
     <li>MATRIX</li>
-    <img src="C:\Users\kulu1\Desktop\webdev\html-personal site\images\matrixschool.jpg" alt="">
+    <img src="./matrixschool.jpg" alt="">
     <li>ADIS</li>
-    <img src="C:\Users\kulu1\Desktop\webdev\html-personal site\images\adisschool.jpg" alt="">
+    <img src="./adisschool.jpg" alt="">
     <li>MITWPU</li>
-    <img src="C:\Users\kulu1\Desktop\webdev\html-personal site\images\mitwpu.jpg" alt="">
+    <img src="./mitwpu.jpg" alt="">
   </ul>
   <hr>
   <h3>Education Years</h3>
